# Test-Task-111513705

./: docker-compose.yml  pyproject.toml
source/cli-tool/: Dockerfile  main.py
