[tool.poetry]
name = "test-task-111513705"
version = "0.1.0"
description = ""
authors = ["Maxim Plotnikov <develop.kisa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.cli-tool.dependencies]
confluent-kafka = "2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
